# TinyRenderer

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  shader.cpp  shader.h  viewport.cpp  viewport.h  viewport.ui
Base/: Source.cpp  Texture.h  camera.cpp  camera.h  canvas.cpp  geometry.cpp  geometry.h  homework.cpp  homework.h  light.cpp  light.h  line.cpp  line.h  model.cpp  model.h  tgaimage.cpp  tgaimage.h  triangle.cpp  triangle.h  world.h
